# serverless-netlify

./: Cargo.toml  README.md  fixture.json  netlify.toml
site/: index.html
src/: main.rs
