[package]
name = "serverless-netlify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version =  "1.33.0", features = ["macros"]}
lambda_http = {version = "0.8.1", default-features = false, features = ["apigw_rest"]}