[package]
name = "serverless-netlify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version =  "1.33.0", features = ["macros"]}
lambda_http = {version = "0.8.1", default-features = false, features = ["apigw_rest"]}
serde = {version = "1.0.190", features = ["derive"]}
serde_json = "1.0.108"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.17", features = ["fmt", "json"]}